--- a/Library.csproj
+++ b/Library.csproj
@@ -1,15 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <OutputType>Library</OutputType>
+    <PackageId>Aidan.Web</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Rodrigo Pazzini Jacques</Authors>
+    <Company>Aidan</Company>
+    <AssemblyName>Aidan.Web</AssemblyName>
+    <RootNamespace>Aidan.Web</RootNamespace>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="AccessManagement\Authentication\" />
-    <Folder Include="AccessManagement\Authorization\" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Aidan.Core" Version="1.2.0" />
