--- a/Library.csproj
+++ b/Library.csproj
@@ -1,16 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <OutputType>Library</OutputType>
     <PackageId>Aidan.Web</PackageId>
     <Version>1.0.0</Version>
     <Authors>Rodrigo Pazzini Jacques</Authors>
     <Company>Aidan</Company>
     <AssemblyName>Aidan.Web</AssemblyName>
     <RootNamespace>Aidan.Web</RootNamespace>
+    <IsPackable>true</IsPackable>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
